# C3

./: .clang-format  CMakeLists.txt  LICENSE  README.md
btrblocks/: btrblocks.hpp  local.cmake
btrblocks/c3/: C3.cpp  C3.hpp  C3Compressor.cpp  C3Compressor.hpp  CompressionSchemes.cpp  CompressionSchemes.hpp  CorrelationGraph.cpp  CorrelationGraph.hpp  Utils.cpp  Utils.hpp
btrblocks/c3/schemes/multi_col/: dfor.cpp  dfor.hpp  dict_1to1.cpp  dict_1to1.hpp  dict_1toN.cpp  dict_1toN.hpp  dict_sharing.cpp  dict_sharing.hpp  equality.cpp  equality.hpp  numerical.cpp  numerical.hpp
btrblocks/c3/schemes/single_col/: dictionary.cpp  dictionary.hpp
btrblocks/c3/storage/: Datablock.hpp  RowGroup.cpp  RowGroup.hpp
btrblocks/common/: SIMD.hpp
btrblocks/compression/: Compressor.hpp  Datablock.cpp  Datablock.hpp  SchemePicker.hpp
btrblocks/scheme/: SchemeConfig.hpp
btrblocks/scheme/double/: OneValue.cpp  OneValue.hpp  Pseudodecimal.cpp
btrblocks/scheme/integer/: OneValue.cpp  OneValue.hpp
btrblocks/scheme/string/: DynamicDictionary.cpp  Fsst.cpp  OneValue.cpp  OneValue.hpp
btrblocks/scheme/templated/: DynamicDictionary.hpp  Frequency.hpp
btrblocks/stats/: NumberStats.hpp  StringStats.cpp  StringStats.hpp
btrblocks/storage/: Chunk.cpp  Chunk.hpp  InputChunk.cpp  InputChunk.hpp  Relation.cpp  Relation.hpp  StringArrayViewer.hpp
btrfiles/: CSVParser.hpp  Parser.cpp
example/: CMakeLists.txt  c3_example.cpp
playground/: CMakeLists.txt  benchmarks.cpp  compressBB.cpp  compressC3.cpp  thomas.cpp
public_bi/PublicBIbenchmark_small/: .gitignore  README.md
public_bi/PublicBIbenchmark_small/AirlineSentiment/AirlineSentiment_1/: AirlineSentiment_1.csv  schema.yaml
public_bi/PublicBIbenchmark_small/Arade/Arade_1/: Arade_1.csv  schema.yaml
public_bi/PublicBIbenchmark_small/Bimbo/Bimbo_1/: Bimbo_1.csv  schema.yaml
public_bi/PublicBIbenchmark_small/CMSprovider/CMSprovider_1/: schema.yaml
public_bi/PublicBIbenchmark_small/CityMaxCapita/CityMaxCapita_1/: schema.yaml
public_bi/PublicBIbenchmark_small/CommonGovernment/CommonGovernment_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Corporations/Corporations_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Eixo/Eixo_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Euro2016/Euro2016_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Food/Food_1/: Food_1.csv  schema.yaml
public_bi/PublicBIbenchmark_small/Generico/Generico_1/: schema.yaml
public_bi/PublicBIbenchmark_small/HashTags/HashTags_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Hatred/Hatred_1/: schema.yaml
public_bi/PublicBIbenchmark_small/IGlocations1/IGlocations1_1/: IGlocations1_1.csv  schema.yaml
public_bi/PublicBIbenchmark_small/IUBLibrary/IUBLibrary_1/: IUBLibrary_1.csv  schema.yaml
public_bi/PublicBIbenchmark_small/MLB/MLB_1/: schema.yaml
public_bi/PublicBIbenchmark_small/MedPayment1/MedPayment1_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Medicare1/Medicare1_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Motos/Motos_1/: schema.yaml
public_bi/PublicBIbenchmark_small/MulheresMil/MulheresMil_1/: schema.yaml
public_bi/PublicBIbenchmark_small/NYC/NYC_1/: schema.yaml
public_bi/PublicBIbenchmark_small/PanCreactomy1/PanCreactomy1_1/: schema.yaml
public_bi/PublicBIbenchmark_small/RealEstate1/RealEstate1_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Redfin1/Redfin1_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Rentabilidad/Rentabilidad_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Romance/Romance_1/: schema.yaml
public_bi/PublicBIbenchmark_small/SalariesFrance/SalariesFrance_1/: schema.yaml
public_bi/PublicBIbenchmark_small/TableroSistemaPenal/TableroSistemaPenal_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Taxpayer/Taxpayer_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Telco/Telco_1/: schema.yaml
public_bi/PublicBIbenchmark_small/TrainsUK1/TrainsUK1_2/: schema.yaml
public_bi/PublicBIbenchmark_small/TrainsUK2/TrainsUK2_1/: schema.yaml  stats.csv
public_bi/PublicBIbenchmark_small/USCensus/USCensus_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Uberlandia/Uberlandia_1/: schema.yaml
public_bi/PublicBIbenchmark_small/Wins/Wins_1/: schema.yaml
public_bi/PublicBIbenchmark_small/YaleLanguages/YaleLanguages_1/: schema.yaml
public_bi/include/: dataset.hpp  datasets.hpp
public_bi/result/: c3_log.txt  tests_log.txt
public_bi/result/1/: relation_stats.csv
public_bi/result/3/16384/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/3/327/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/3/3276/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/3/32768/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/3/49152/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/3/655/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/3/6553/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/3/65536/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/4/16384/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/4/327/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/4/3276/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/4/32768/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/4/49152/: c3_log.txt  column_stats.csv  relation_stats.csv  row_group_stats.csv  scheme_stats.csv
public_bi/result/graphs/: figures.ipynb
public_bi/scripts/: create_public_bi_datasets.py
tests/: CMakeLists.txt  publicBI.cpp
(+336 files in other folders)
